# libmx

./: README.md
Current/: Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac
Current/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
Current/source/: Makefile.am  Makefile.in  current.cc  current.h  current_game.cc  current_game.h  game_controller.cc  game_controller.h  game_screen.cc  game_screen.h  main.cc  main_window.cc  main_window.h
libmx/: Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool  mx.pc  mx.pc.in  mxDox
libmx/OpenGL_examples/: Makefile  Makefile.am  Makefile.in  light.cpp  rect.cpp  rot.cpp  tri.cpp
libmx/OpenGL_examples/.deps/: light.Po  rect.Po  rot.Po  tri.Po
libmx/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
libmx/et_test/: Makefile  Makefile.am  Makefile.in  et_test.cpp  et_test_book.cpp  hashtable.cpp
libmx/mathtest/: Makefile  Makefile.am  Makefile.in  main.cpp  mx3d_math
libmx/mathtest/.deps/: main.Po
libmx/mx/: Makefile  Makefile.am  Makefile.in  args.cpp  args.h  colorVector.cpp  colorVector.h  mx.h  mx3d_graphics.h  mx3d_graphics_sdl.cpp  mx3d_math.h  mx_exception.h  mx_font.cpp  mx_font.h  mx_tok.h  mx_types.cpp  mx_types.h  mxclamp.cpp  mxclamp.h  mxeternal.cpp  mxeternal.h  mxf.h  mxfont.cpp  mxfunction.cpp  mxfunction.h  mximage.cpp  mximage.h  mximg.cpp  mximg.h  mxinterface.cpp  mxinterface.h  mxjoystick.cpp  mxjoystick.h  mxjpeg.cpp  mxjpeg.h  mxmemory.cpp  mxmemory.h  mxpixel.cpp  mxpixel.h  mxpng.cpp  (+22 more)
libmx/mx/.deps/: libmx_la-args.Plo  libmx_la-colorVector.Plo  libmx_la-mx3d_graphics_sdl.Plo  libmx_la-mx_font.Plo  libmx_la-mx_types.Plo  libmx_la-mxclamp.Plo  libmx_la-mxeternal.Plo  libmx_la-mxfont.Plo  libmx_la-mxfunction.Plo  libmx_la-mximage.Plo  libmx_la-mximg.Plo  libmx_la-mxinterface.Plo  libmx_la-mxjoystick.Plo  libmx_la-mxjpeg.Plo  libmx_la-mxmemory.Plo  libmx_la-mxpixel.Plo  libmx_la-mxpng.Plo  libmx_la-mxscreen.Plo  libmx_la-mxsemaphore.Plo  libmx_la-mxsocket.Plo  libmx_la-mxsurface.Plo  libmx_la-mxthread.Plo  libmx_la-mxtimer.Plo  libmx_la-mxttf.Plo  libmx_la-mxvector.Plo  libmx_la-mxwnd.Plo  libmx_la-pixelbuffer.Plo
libmx/mxmp/: Makefile  Makefile.am  Makefile.in  gamescreen.cpp  mpmut.cpp  mpmut.h  mpsplit.cpp  mxmp.cpp  mxmp.h  mxmp_imp.cpp  mxmulti.cpp  totals.mxdb
libmx/mxwnd_test/: Makefile  Makefile.am  Makefile.in  jpgTest.cpp  mxwnd_test.cpp  resize.cpp  subclass_test.cpp  surface_test.cpp
libmx/mxwnd_test/.deps/: jpgTest.Po  mxwnd_test.Po  resize.Po  subclass_test.Po  surface_test.Po
libmx/socket_test/: Makefile  Makefile.am  Makefile.in  sendcmd.cpp  test1.cpp  test2.cpp
libmx/socket_test/.deps/: test1.Po
libmx/tricolor/: Makefile  Makefile.am  Makefile.in  fast.s  fast_w32.s  lines.txt  main.cpp  x64.c
libmx/tricolor/.deps/: main.Po
libmx/triheart/: Makefile  Makefile.am  Makefile.in  README  icon.rc  th.cpp  triheart
libmx/triheart/.deps/: th.Po
