bin_PROGRAMS=et_test et_test_book hashtable
et_test_SOURCES=et_test.cpp
et_test_book_SOURCES=et_test_book.cpp 
hashtable_SOURCES=hashtable.cpp

AM_CPPFLAGS =  $(CFLAGPREFIX)  $(all_includes) -I../mx
#AM_LDFLAGS  = $(all_librarys) $(LIBSDL_RPATH) $(LDPREFIX) -static -L../mx -lmx $(LIBSDL_LIBS) -lpng -lz